--- a/Pandas/merging.ipynb
+++ b/Pandas/merging.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "651196a0-2065-4ab1-8123-40eca849af41",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "ea0ecd30-9f6e-4cc4-848c-00cc02763ba7",
    "metadata": {},
    "outputs": [
@@ -135,7 +136,7 @@
        "4       Retail     Manager5          5  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,8 +487,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "343c56da-7845-4407-a98f-f70a09074664",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 10)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "576b3c14-802a-46e2-bae8-f5fdb70fc9aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df2.ndim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "4d9d77a0-dd24-4680-9546-ccf560445c95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['2024-01-01', 'North', 'Product A', 100.0, 5.0],\n",
+       "       [500.0, 'Cash', nan, 'Manager1', 1],\n",
+       "       ['2024-01-02', 'East', nan, 150.0, 2.0],\n",
+       "       [nan, 'Card', 'Retail', 'Manager2', 2],\n",
+       "       ['2024-01-03', 'West', 'Product C', 200.0, 4.0],\n",
+       "       [800.0, 'Cash', 'Wholesale', nan, 3],\n",
+       "       ['2024-01-04', nan, 'Product D', nan, 3.0],\n",
+       "       [600.0, 'UPI', 'Retail', 'Manager4', 4],\n",
+       "       ['2024-01-05', 'South', 'Product E', 120.0, nan],\n",
+       "       [480.0, nan, 'Retail', 'Manager5', 5]], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.values.reshape(10, 5)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "aa3ce4c9-5b5a-4a4a-be04-719e2bb1547c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>PaymentMethod</th>\n",
+       "      <th>CustomerType</th>\n",
+       "      <th>SalesManager</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>North</td>\n",
+       "      <td>Product A</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Manager1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-01-02</td>\n",
+       "      <td>East</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>Manager2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-01-03</td>\n",
+       "      <td>West</td>\n",
+       "      <td>Product C</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>Wholesale</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-01-04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Product D</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>UPI</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>Manager4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-01-05</td>\n",
+       "      <td>South</td>\n",
+       "      <td>Product E</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>480.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>Manager5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date Region    Product  Price  Quantity  Total PaymentMethod  \\\n",
+       "0  2024-01-01  North  Product A  100.0       5.0  500.0          Cash   \n",
+       "1  2024-01-02   East        NaN  150.0       2.0    NaN          Card   \n",
+       "2  2024-01-03   West  Product C  200.0       4.0  800.0          Cash   \n",
+       "3  2024-01-04    NaN  Product D    NaN       3.0  600.0           UPI   \n",
+       "4  2024-01-05  South  Product E  120.0       NaN  480.0           NaN   \n",
+       "\n",
+       "  CustomerType SalesManager  InvoiceNo  \n",
+       "0          NaN     Manager1          1  \n",
+       "1       Retail     Manager2          2  \n",
+       "2    Wholesale          NaN          3  \n",
+       "3       Retail     Manager4          4  \n",
+       "4       Retail     Manager5          5  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da366c5d-bc59-4f29-ba28-de766ac96db9",
    "metadata": {},
    "outputs": [],
    "source": []
